--- a/winter-data.numbers/Metadata/BuildVersionHistory.plist
+++ b/winter-data.numbers/Metadata/BuildVersionHistory.plist
@@ -8,5 +8,6 @@
 	<string>M11.2-7032.0.145-2</string>
 	<string>G-r1120-11C170</string>
 	<string>G-r1120-11C171</string>
+	<string>G-r1200-12A133</string>
 </array>
 </plist>
