--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ networkx = "^2.6.3"
 matplotlib = "^3.5.1"
 netwulf = "^0.1.5"
 dash-bootstrap-components = "^1.0.3"
+dash-daq = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.931"
