--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,7 @@ flake8 = "^4.0.1"
 ipykernel = "^6.7.0"
 networkx = "^2.6.3"
 matplotlib = "^3.5.1"
-netwulf = "^0.1.5"
-dash-bootstrap-components = "^1.0.3"
+dash-bootstrap-components = ">=1.0.3"
 dash-daq = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
