--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,17 @@ python = "^3.9"
 dash = "^2.0.0"
 pandas = "^1.3.5"
 dash-cytoscape = "^0.3.0"
-scikit-learn = "^1.0.2"
+scikit-learn = ">=1.0.2"
 black = "^21.12b0"
 flake8 = "^4.0.1"
-ipykernel = "^6.7.0"
+ipykernel = ">=6.7.0"
 networkx = "^2.6.3"
 matplotlib = "^3.5.1"
 dash-bootstrap-components = ">=1.0.3"
 dash-daq = "^0.5.0"
+joblib = ">=1.2.0"
+pillow = ">=9.0.1"
+ipython = ">=8.0.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.931"
