--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,10 @@
-appnope==0.1.2 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Darwin" or python_version >= "3.9" and python_version < "4.0" and sys_platform == "darwin"
-asttokens==2.0.5 ; python_version >= "3.9" and python_version < "4.0"
-backcall==0.2.0 ; python_version >= "3.9" and python_version < "4.0"
-black==21.12b0 ; python_version >= "3.9" and python_version < "4.0"
-brotli==1.0.9 ; python_version >= "3.9" and python_version < "4.0"
-cffi==1.15.0 ; python_version >= "3.9" and python_version < "4.0" and implementation_name == "pypy"
-click==8.0.3 ; python_version >= "3.9" and python_version < "4.0"
-colorama==0.4.4 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows"
-cycler==0.11.0 ; python_version >= "3.9" and python_version < "4.0"
-dash-bootstrap-components==1.2.1 ; python_version >= "3.9" and python_version < "4"
-dash-core-components==2.0.0 ; python_version >= "3.9" and python_version < "4.0"
-dash-cytoscape==0.3.0 ; python_version >= "3.9" and python_version < "4.0"
-dash-daq==0.5.0 ; python_version >= "3.9" and python_version < "4.0"
-dash-html-components==2.0.0 ; python_version >= "3.9" and python_version < "4.0"
-dash-table==5.0.0 ; python_version >= "3.9" and python_version < "4.0"
-dash==2.0.0 ; python_version >= "3.9" and python_version < "4.0"
-debugpy==1.5.1 ; python_version >= "3.9" and python_version < "4.0"
-decorator==5.1.1 ; python_version >= "3.9" and python_version < "4.0"
-entrypoints==0.3 ; python_version >= "3.9" and python_version < "4.0"
-executing==0.8.2 ; python_version >= "3.9" and python_version < "4.0"
-flake8==4.0.1 ; python_version >= "3.9" and python_version < "4.0"
-flask-compress==1.10.1 ; python_version >= "3.9" and python_version < "4.0"
-flask==2.0.2 ; python_version >= "3.9" and python_version < "4.0"
-fonttools==4.29.1 ; python_version >= "3.9" and python_version < "4.0"
-ipykernel==6.17.1 ; python_version >= "3.9" and python_version < "4.0"
-ipython==8.6.0 ; python_version >= "3.9" and python_version < "4.0"
-itsdangerous==2.0.1 ; python_version >= "3.9" and python_version < "4.0"
-jedi==0.18.1 ; python_version >= "3.9" and python_version < "4.0"
-jinja2==3.0.3 ; python_version >= "3.9" and python_version < "4.0"
-joblib==1.2.0 ; python_version >= "3.9" and python_version < "4.0"
-jupyter-client==7.1.1 ; python_version >= "3.9" and python_version < "4.0"
-jupyter-core==4.9.1 ; python_version >= "3.9" and python_version < "4.0"
-kiwisolver==1.3.2 ; python_version >= "3.9" and python_version < "4.0"
-markupsafe==2.0.1 ; python_version >= "3.9" and python_version < "4.0"
-matplotlib-inline==0.1.3 ; python_version >= "3.9" and python_version < "4.0"
-matplotlib==3.5.1 ; python_version >= "3.9" and python_version < "4.0"
-mccabe==0.6.1 ; python_version >= "3.9" and python_version < "4.0"
-mypy-extensions==0.4.3 ; python_version >= "3.9" and python_version < "4.0"
-nest-asyncio==1.5.4 ; python_version >= "3.9" and python_version < "4.0"
-networkx==2.6.3 ; python_version >= "3.9" and python_version < "4.0"
-numpy==1.22.1 ; python_version < "4.0" and python_version >= "3.9"
-packaging==21.3 ; python_version >= "3.9" and python_version < "4.0"
-pandas==1.3.5 ; python_version >= "3.9" and python_version < "4.0"
-parso==0.8.3 ; python_version >= "3.9" and python_version < "4.0"
-pathspec==0.9.0 ; python_version >= "3.9" and python_version < "4.0"
-pexpect==4.8.0 ; python_version >= "3.9" and python_version < "4.0" and sys_platform != "win32"
-pickleshare==0.7.5 ; python_version >= "3.9" and python_version < "4.0"
-pillow==9.3.0 ; python_version >= "3.9" and python_version < "4.0"
-platformdirs==2.4.1 ; python_version >= "3.9" and python_version < "4.0"
-plotly==5.5.0 ; python_version >= "3.9" and python_version < "4.0"
-prompt-toolkit==3.0.24 ; python_version >= "3.9" and python_version < "4.0"
-psutil==5.9.4 ; python_version >= "3.9" and python_version < "4.0"
-ptyprocess==0.7.0 ; python_version >= "3.9" and python_version < "4.0" and sys_platform != "win32"
-pure-eval==0.2.1 ; python_version >= "3.9" and python_version < "4.0"
-py==1.11.0 ; python_version >= "3.9" and python_version < "4.0" and implementation_name == "pypy"
-pycodestyle==2.8.0 ; python_version >= "3.9" and python_version < "4.0"
-pycparser==2.21 ; python_version >= "3.9" and python_version < "4.0" and implementation_name == "pypy"
-pyflakes==2.4.0 ; python_version >= "3.9" and python_version < "4.0"
-pygments==2.11.2 ; python_version >= "3.9" and python_version < "4.0"
-pyparsing==3.0.7 ; python_version >= "3.9" and python_version < "4.0"
-python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "4.0"
-pytz==2021.3 ; python_version >= "3.9" and python_version < "4.0"
-pywin32==303 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.9" and python_version < "4.0"
-pyzmq==22.3.0 ; python_version >= "3.9" and python_version < "4.0"
-scikit-learn==1.1.3 ; python_version >= "3.9" and python_version < "4.0"
-scipy==1.6.1 ; python_version >= "3.9" and python_version < "4.0"
-setuptools-scm==6.4.2 ; python_version >= "3.9" and python_version < "4.0"
-setuptools==65.5.1 ; python_version >= "3.9" and python_version < "4.0"
-six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
-stack-data==0.1.4 ; python_version >= "3.9" and python_version < "4.0"
-tenacity==8.0.1 ; python_version >= "3.9" and python_version < "4.0"
-threadpoolctl==3.0.0 ; python_version >= "3.9" and python_version < "4.0"
-tomli==1.2.3 ; python_version >= "3.9" and python_version < "4.0"
-tornado==6.1 ; python_version >= "3.9" and python_version < "4.0"
-traitlets==5.1.1 ; python_version >= "3.9" and python_version < "4.0"
-typing-extensions==4.0.1 ; python_version >= "3.9" and python_version < "4.0"
-wcwidth==0.2.5 ; python_version >= "3.9" and python_version < "4.0"
-werkzeug==2.0.2 ; python_version >= "3.9" and python_version < "4.0"
+dash >= 2.0.0
+pandas == 1.3.5
+dash-cytoscape >= 0.3.0
+scikit-learn >= 1.0.2
+networkx >= 2.6.3
+matplotlib >= 3.5.1
+dash-bootstrap-components >= 1.0.3
+dash-daq >= 0.5.0
+joblib >= 1.2.0
+pillow >= 9.0.1
