--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 dash >= 2.0.0
 pandas == 1.3.5
 dash-cytoscape >= 0.3.0
-scikit-learn >= 1.0.2
-networkx >= 2.6.3
-matplotlib >= 3.5.1
+scikit-learn == 1.0.2
+networkx == 2.6.3
 dash-bootstrap-components >= 1.0.3
 dash-daq >= 0.5.0
 joblib >= 1.2.0
